# slog

./: .clang-tidy  CMakeLists.txt  README.rst  environment.yml
cmake/: slog-config.cmake
include/slog/: slog.hpp
src/: slog.cpp
test/: CMakeLists.txt  tst-logger.cpp
tool/: slog.cpp
